--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.build
+#.env
+#.env.build
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
