--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "start-old": "nuxt start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
@@ -29,8 +34,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
-    "nodemon": "^1.18.9",
     "node-sass": "^4.14.1",
+    "nodemon": "^1.18.9",
     "sass-loader": "^8.0.2"
   }
 }
