--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "nuxt": "^2.0.0",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt-fontawesome": "^0.4.0",
+    "vue": "^2.6.11",
+    "vue-mobile-detection": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
